--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-container">
       <img class ="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Nikhil.</h1>
-    <h2><p class="line1">a web designer.</p></h2>
+    <h2><p class="line1">a programmer.</p></h2>
     <img class ="bottom-cloud"src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
     </div>
@@ -21,27 +21,27 @@
       <div class="profile">
         <img class="profile" src="images/nkprofile_crop.png" alt="nikhil-profile">
         <h2>Hello.</h2>
-        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        <p>I am an iOS and Web Developer. I'm a student of Mechanical Engineering at the Netaji Subhas University of Technology (NSUT).</p>
       </div>
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img class="computer" src="images/computer.png" alt="computer">
-          <h3>Lorem & Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <h3>Design & Development</h3>
+          <p>I started learning to code in 2019 because I wanted to make my own video game. Coding ability gives me a new perspective on problem-solving. I have developed skills in programming languages C, C++, HTML, CSS, Javascript, Web Development.</p>
         </div>
         <div class="skill-row">
           <img class="chillies" src="images/chillies.png" alt="chillies">
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <h3>Accept Challenges & Learn More</h3>
+          <p>But my best skill is to accept really hot challenges and learn more. Because I believe that for all of us in many ways, work is a classroom in which we should always be learning.</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p class="contact-meg">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <h3>If you love coding as much as I do.</h3>
+        <p class="contact-meg">Love coding as much as I? Let's talk about how we hone our skills! We can learn to code while playing our own video game!</p>
         <a class="btn" href="mailto:guptanikku514@gmail.com">Contact Me</a>
       </div>
     </div>
